--- a/prepros.config
+++ b/prepros.config
@@ -214,8 +214,8 @@
         "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
-        "removeCharset": false,
-        "sourceMap": false
+        "sourceMap": false,
+        "removeCharset": false
       },
       "haml": {
         "doubleQuoteAttributes": true
@@ -352,8 +352,8 @@
         "outputStyle": "expanded",
         "precision": 10,
         "sourceMap": false,
-        "removeCharset": false,
-        "sourceComments": false
+        "sourceComments": false,
+        "removeCharset": false
       },
       "png": {
         "quality": 90
